# stockAgent

./: .env.example  .gitignore  LICENSE  README.md  llms.py  main.py  pyproject.toml
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  (+258 more)
sub_agents/: __init__.py  balance_sheet_agent.py  cash_position.py  depressing_agent.py  disagreeable_agent.py  earnings_growth_agent.py  financial_metrics_agent.py  insider_buying_agent.py  institutions_agent.py  name_agent.py  niche_agent.py  no_growth_agent.py  pe_ratio_agent.py  recurring_agent.py  rumours.py  share_buyback_agent.py  spinoff_agent.py  stock_category_agent.py  technology_user_agent.py
tools/: corporate_disclosures.py  director_disclosure.py  earnings_growth.py  example_usage.py  get_company_info.py  image_analysis.py  image_analyzer.py  pe_ratio_tool.py
(+3969 files in other folders)
